--- a/src/app/cost-breakdown/cost-breakdown.component.html
+++ b/src/app/cost-breakdown/cost-breakdown.component.html
@@ -2,7 +2,7 @@
 
 
 
-    <table class="table table-striped">
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th scope="col">SN</th>
@@ -202,8 +202,8 @@
 </div>
 
 <!-- summarry and payments  -->
-<div class="container">
-    <table class="table table-striped">
+<div class="container mt-5">
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th scope="col">SN</th>
