--- a/src/app/pm/pm.component.html
+++ b/src/app/pm/pm.component.html
@@ -1,5 +1,5 @@
 <!-- table part -->
-<div class="container-flex mt-5">
+<div class="container mt-5">
     <div class="container-flex">
         <div class="row">
             <div class="col-6">
