--- a/src/app/person/person.component.html
+++ b/src/app/person/person.component.html
@@ -47,11 +47,11 @@
     </div>
 </div> -->
 <!-- table part -->
-<div class="container-flex mt-5">
+<div class="container mt-5">
     <div class="container-flex">
         <div class="row">
             <div class="col-6">
-
+                <input type="text" [(ngModel)]="filter.searchKey" placeholder="Search">
             </div>
             <div class="col-6">
                 <span class="btn btn-success float-right" data-toggle="modal" data-target="#create">
@@ -75,7 +75,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of allSO; let i = index;">
+            <tr *ngFor="let item of allSO | filterBy:filter; let i = index;">
                 <td>{{i+1}}</td>
                 <td>{{item[formControlNames.personCode]}}</td>
                 <td>
@@ -90,7 +90,7 @@
 
 
                 <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2" data-toggle="modal"
-                    data-target="#update" (click)="edit(i)">
+                    data-target="#update" (click)="edit(item)">
                     <i class="fa fa-pencil"> </i>
 
                 </span>
