--- a/src/app/scheme/scheme.component.html
+++ b/src/app/scheme/scheme.component.html
@@ -1,4 +1,4 @@
-<div class="container-flex mt-5 mb-5">
+<div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-4">
             <span class="h4">Show Scheme by SO</span>
@@ -10,7 +10,7 @@
                             <option *ngFor="let item of allSO" [value]="item['soId']">{{item['name']}}
                             </option>
 
-                            
+
                         </select>
                     </div>
                     <div class="form-group col-2">
@@ -24,12 +24,13 @@
                 </div>
             </form>
         </div>
-    
+
     </div>
 </div>
 
 
-<div class="container-flex">
+<div class="container">
+    <input type="text" [(ngModel)]="filter.name" placeholder="Search">
     <span class="btn btn-success float-right" data-toggle="modal" data-target="#create">
         <i class="fa fa-plus"> </i> Add Scheme
     </span>
@@ -45,20 +46,19 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of allScheme; let i = index;">
+            <tr *ngFor="let item of allScheme | filterBy:filter; let i = index;">
                 <th scope="row"> {{ i+1 }} </th>
                 <td> {{item.schemeCode}}</td>
                 <td> {{item.name}}</td>
                 <td>{{item.nameNP}}</td>
                 <td>
 
-                    <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2"
-                     (click)="edit(i)" data-toggle="modal" data-target="#update">
+                    <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2" (click)="edit(item)"
+                        data-toggle="modal" data-target="#update">
                         <i class="fa fa-pencil"> </i>
 
                     </span>
-                    <span class="btn btn-danger rounded-circle rounded-circle-sm"
-                        (click)="delete(item.schemeId)">
+                    <span class="btn btn-danger rounded-circle rounded-circle-sm" (click)="delete(item.schemeId)">
                         <i class="fa fa-trash"> </i>
 
                     </span>
@@ -73,8 +73,7 @@
 
 
 <!-- Modal create -->
-<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -114,8 +113,7 @@
     </div>
 </div>
 <!-- Modal update -->
-<div class="modal fade" id="update" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade" id="update" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
