--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
 <style>
   @media print {
-     .noprint {
-        visibility: hidden;
-     }
+    .noprint {
+      visibility: hidden;
+    }
   }
-  </style>
+</style>
 <div class="noprint">
 
 
-<div id="wrapper" [className]="active? 'toggled' : ''">
+  <div id="wrapper" [className]="active? 'toggled' : ''">
 
     <aside id="sidebar-wrapper">
       <!-- <div class="sidebar-brand">
@@ -18,12 +18,13 @@
         <li class="active mb-5" (click)="toggleClass($event)">
           <a><i class="fa fa-bars"></i>Menu</a>
         </li>
-        <li *ngFor="let item of listItems" [routerLink]="[item.urlTo]" routerLinkActive="router-link-active" >
+        <li *ngFor="let item of listItems" [routerLink]="[item.urlTo]" routerLinkActive="router-link-active"
+          data-toggle="popover" title="{{item.name}}">
           <a><i [className]="'fa fa-'+item.icon"></i>{{item.name}}</a>
         </li>
       </ul>
     </aside>
-  
+
     <!-- <div id="navbar-wrapper">
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -33,7 +34,7 @@
         </div>
       </nav>
     </div> -->
-  
+
     <!-- <section id="content-wrapper">
         <div class="row">
           <div class="col-lg-12">
@@ -42,7 +43,7 @@
           </div>
         </div>
     </section> -->
-  
+
   </div>
 
 </div>
