--- a/src/app/so/so.component.html
+++ b/src/app/so/so.component.html
@@ -51,7 +51,7 @@
     <div class="container-flex">
         <div class="row">
             <div class="col-6">
-
+                <input type="text" [(ngModel)]="filter.name" placeholder="Search">
             </div>
             <div class="col-6">
                 <span class="btn btn-success float-right" data-toggle="modal" data-target="#create">
@@ -75,7 +75,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of allSO; let i = index;">
+            <tr *ngFor="let item of allSO | filterBy:filter; let i = index;">
                 <td>{{i+1}}</td>
                 <td>{{item[formControlNames.soCode]}}</td>
                 <td>{{item[formControlNames.name]}}</td>
@@ -91,7 +91,7 @@
 
                     </span>
                     <span class="btn btn-primary rounded-circle rounded-circle-sm mr-2" data-toggle="modal"
-                        data-target="#update" (click)="edit(i)">
+                        data-target="#update" (click)="edit(item)">
                         <i class="fa fa-pencil"> </i>
 
                     </span>
