--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,5 +1,5 @@
 <div class="container-flex mt-5">
-  <div class="h1 text-center"> SO Assignment
+  <div class="h1 text-center"> Generate Contract
     <span class="h4 text-center spinner-border" role="status" *ngIf="loading">
       <span class="sr-only">Loading...</span>
     </span>
