--- a/src/app/so/so.component.html
+++ b/src/app/so/so.component.html
@@ -25,7 +25,7 @@
             </form>
         </div>
         <div class="col-6">
-            <span class="h4">Show SO by local-body</span>
+            <!-- <span class="h4">Show SO by local-body</span>
             <form class="form" [formGroup]="filterForm">
                 <div class="form-row">
                     <div class="form-group col-10">
@@ -42,7 +42,7 @@
                         </span>
                     </div>
                 </div>
-            </form>
+            </form> -->
         </div>
     </div>
 </div>
